--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@angular/animations": "^17.1.3",
+    "@angular/cdk": "^17.1.3",
     "@angular/common": "^17.1.3",
     "@angular/compiler": "^17.1.3",
     "@angular/core": "^17.1.3",
