--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -19,6 +19,7 @@
   "peerDependencies": {
     "mathjs": "^12.4.2",
     "@angular/animations": "^17.1.3",
+    "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.1.3",
     "@angular/compiler": "^17.1.3",
     "@angular/core": "^17.1.3",
