--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coding-components",
   "config": {
-    "schemer_version": "2.1.5"
+    "schemer_version": "2.2.0"
   },
   "scripts": {
     "ng": "ng",
@@ -28,11 +28,11 @@
     "@angular/router": "^17.1.3",
     "@iqb/responses": "^3.4.0",
     "@ngx-translate/core": "^15.0.0",
+    "mathjs": "^12.4.2",
     "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.4",
-    "mathjs": "^12.4.2"
+    "zone.js": "~0.14.4"
   },
   "peerDependencies": {
     "@angular/material": "^17.1.2",
@@ -63,8 +63,8 @@
     "@tiptap/extension-text-align": "^2.1.10",
     "@tiptap/extension-text-style": "^2.1.10",
     "@tiptap/extension-underline": "^2.1.10",
-    "ngx-tiptap": "^9.0.2",
     "ngx-build-plus": "^17.0.0",
+    "ngx-tiptap": "^9.0.2",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
@@ -73,6 +73,7 @@
     "@angular/compiler-cli": "^17.1.3",
     "@iqb/eslint-config": "^2.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.4.4",
     "iqb-dev-components": "^1.4.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -80,10 +81,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2",
     "ng-packagr": "^17.1.3",
-    "@types/node": "^20.4.4",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "~5.4.2"
   },
   "eslintConfig": {
     "overrides": [
