--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -29,7 +29,7 @@
     "@angular/platform-browser": "^17.1.3",
     "@angular/platform-browser-dynamic": "^17.1.3",
     "@angular/router": "^17.1.3",
-    "@iqb/responses": "~3.3.2",
+    "@iqb/responses": "^3.4.0",
     "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.1.10",
     "@tiptap/extension-blockquote": "^2.1.10",
@@ -55,7 +55,7 @@
     "@tiptap/extension-text-align": "^2.1.10",
     "@tiptap/extension-text-style": "^2.1.10",
     "@tiptap/extension-underline": "^2.1.10",
-    "ngx-tiptap": "^9.0.2",
+    "ngx-tiptap": "^10.1.0",
     "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.4"
