--- a/package.json
+++ b/package.json
@@ -26,17 +26,20 @@
     "@angular/platform-browser": "^19.1.8",
     "@angular/platform-browser-dynamic": "^19.1.8",
     "@angular/router": "^19.1.8",
-    "@iqb/responses": "^3.7.0",
+    "@iqb/responses": "^4.0.0",
+    "@iqbspecs/coding-scheme": "^3.2.0",
+    "@iqbspecs/response": "^1.4.0",
+    "@iqbspecs/variable-info": "^1.3.0",
     "@ngx-translate/core": "^15.0.0",
     "mathjs": "^12.4.2",
-    "ngx-build-plus": "^19.0.0",
+    "ngx-build-plus": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "peerDependencies": {
     "@angular/material": "^19.1.5",
-    "@iqb/responses": "^3.7.0",
+    "@iqb/responses": "^4.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@tiptap/core": "^2.1.10",
