--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -4,7 +4,7 @@
   "exports": {
     "./lib/ngx-coding-components.module": "./lib/ngx-coding-components.module.d.ts"
   },
-  "version": "2.2.0",
+  "version": "2.3.0",
   "author": "IQB - Institut zur Qualitätsentwicklung im Bildungswesen",
   "license": "MIT",
   "description": "Angular components for coding responses in assessments of IQB.",
@@ -18,17 +18,17 @@
   "homepage": "https://github.com/iqb-berlin/coding-components#readme",
   "peerDependencies": {
     "mathjs": "^12.4.2",
-    "@angular/animations": "19.1.8",
-    "@angular/cdk": "19.1.5",
-    "@angular/common": "19.1.8",
-    "@angular/compiler": "19.1.8",
-    "@angular/core": "19.1.8",
-    "@angular/elements": "19.1.8",
-    "@angular/forms": "19.1.8",
-    "@angular/material": "19.1.5",
-    "@angular/platform-browser": "19.1.8",
-    "@angular/platform-browser-dynamic": "19.1.8",
-    "@angular/router": "19.1.8",
+    "@angular/animations": "^19.1.8",
+    "@angular/cdk": "^19.1.5",
+    "@angular/common": "^19.1.8",
+    "@angular/compiler": "^19.1.8",
+    "@angular/core": "^19.1.8",
+    "@angular/elements": "^19.1.8",
+    "@angular/forms": "^19.1.8",
+    "@angular/material": "^19.1.5",
+    "@angular/platform-browser": "^19.1.8",
+    "@angular/platform-browser-dynamic": "^19.1.8",
+    "@angular/router": "^19.1.8",
     "@iqb/responses": "^4.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.1.10",
