--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -30,6 +30,8 @@
     "@angular/platform-browser-dynamic": "^20.0.5",
     "@angular/router": "^20.0.5",
     "@iqb/responses": "^4.0.0",
+    "@iqbspecs/coding-scheme": "^3.2.0",
+    "@iqbspecs/variable-info": "^1.3.0",
     "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.23.1",
     "@tiptap/extension-blockquote": "^2.23.1",
