--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build_sc": "rm -f dist/*.* && rm -rf dist/schemer && ng build --project schemer --output-hashing=none",
     "pack_sc": "node scripts/wrap_and_pack.js schemer $npm_package_config_schemer_version projects/schemer/src/html_wrapper/index.html",
     "buildAndPack_sc": "npm run build_sc && npm run pack_sc",
-    "npm_publish": "cd dist/ngx-coding-components && npm publish --access public"
+    "npm_publish": "cd dist/ngx-coding-components && npm publish --access public",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "validate:scheme": "node validate-coding-scheme.js"
   },
   "dependencies": {
     "@angular/animations": "^20.0.5",
@@ -29,6 +32,7 @@
     "@iqb/responses": "^4.0.0",
     "@iqbspecs/coding-scheme": "^3.3.0",
     "@iqbspecs/response": "^1.4.0",
+    "@iqbspecs/validate-json": "^0.4.0",
     "@iqbspecs/variable-info": "^1.3.0",
     "@ngx-translate/core": "^15.0.0",
     "mathjs": "^15.1.0",
@@ -71,6 +75,7 @@
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.0.5",
     "@iqb/eslint-config": "^2.2.0",
+    "eslint": "^8.57.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.4.4",
     "iqb-dev-components": "^1.4.1",
