--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,18 @@
       "extends": "@iqb/eslint-config"
     },
     {
+      "files": ["**/karma.conf.js"],
+      "extends": "@iqb/eslint-config/javascript",
+      "env": {
+        "node": true
+      },
+      "rules": {
+        "no-underscore-dangle": "off",
+        "func-names": "off",
+        "import/no-extraneous-dependencies": "off"
+      }
+    },
+    {
       "files": ["*.js"],
       "extends": "@iqb/eslint-config/javascript"
     }
