--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ngx-translate/core": "^15.0.0",
     "mathjs": "^15.1.0",
     "ngx-build-plus": "^20.0.0",
+    "prosemirror-state": "^1.4.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -86,9 +87,9 @@
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.0.5",
     "@iqb/eslint-config": "^2.2.0",
-    "eslint": "^8.57.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.4.4",
+    "eslint": "^8.57.0",
     "iqb-dev-components": "^1.4.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
