--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@iqbspecs/coding-scheme": "^3.3.0",
+    "prosemirror-state": "^1.3.4",
     "tslib": "^2.3.0"
   },
   "sideEffects": false
