--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/package.json"
             ],
             "styles": [
               "src/styles.scss",
