--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build_sc": "rm -f dist/*.* && rm -rf dist/schemer && ng build --project schemer --output-hashing=none",
     "pack_sc": "node scripts/wrap_and_pack.js schemer $npm_package_config_schemer_version projects/schemer/src/html_wrapper/index.html",
     "buildAndPack_sc": "npm run build_sc && npm run pack_sc",
-    "npm_publish": "cd dist/ngx-coding-components && npm publish --access public",
+    "npm_publish": "npm run npm_publish_cc && npm run npm_publish_elements",
+    "npm_publish_cc": "cd dist/ngx-coding-components && npm publish --access public",
+    "npm_publish_elements": "cd dist/coding-components-elements && npm publish --access public",
     "lint": "eslint -c .eslintrc.cjs src projects --ext .ts,.js --cache --ignore-pattern '**/karma.conf.js'",
     "lint:fix": "eslint -c .eslintrc.cjs src projects --ext .ts,.js --fix --cache --ignore-pattern '**/karma.conf.js'",
     "validate:scheme": "node scripts/validate-coding-scheme.js",
